Fix topics block alignment

--- a/components/StreamField/blocks/TopicsBlock/TopicsBlock.module.scss
+++ b/components/StreamField/blocks/TopicsBlock/TopicsBlock.module.scss
@@ -1,10 +1,19 @@
 .grid {
     display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    column-gap: 5%;
 
     @include media-query(medium) {
+        column-gap: 2%;
+        margin-left: calc(-1.5rem - 171px);
+        margin-right: max(-10rem, -1.5rem - 171px);
+    }
+
+    @include media-query(large) {
         grid-template-columns: repeat(4, 1fr);
         column-gap: 1%;
-        margin: 0 min(-10rem, -25%);
+        margin-left: calc(-1.5rem - 213px);
+        margin-right: max(-10rem, -1.5rem - 213px);
     }
 }
 
